Correct alignment for h2 and footer

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -22,6 +22,7 @@ body {
 }
 
 #main h2 {
+  margin-left: 6px;
   width: 100%;
   font-size: 2em;
   text-align: center;
@@ -35,10 +36,11 @@ body {
 
 #footer {
   width: 500px;
-  margin: 15px 36%;
+  margin: 0 auto;
   padding-top: 36px;
   text-shadow: #888 0.01em 0.05em 0.15em;
   text-transform: uppercase;
+  text-align: center;
 }
 
 #footer a {
